syntax = "proto3";

package syntrix.puller.v1;

option go_package = "github.com/codetrek/syntrix/api/puller/v1;pullerv1";

// PullerService provides access to the merged event stream from all backends.
// Consumers subscribe to events and manage their own progress.
service PullerService {
  // Subscribe to merged event stream from all backends.
  // Events are delivered in order within each backend, merged across backends.
  rpc Subscribe(SubscribeRequest) returns (stream Event);
}

// SubscribeRequest configures a subscription to the event stream.
message SubscribeRequest {
  // Consumer identifier for logging/monitoring only.
  // Does not affect event delivery.
  string consumer_id = 1;

  // Progress marker from last processed event.
  // Return events AFTER this marker (exclusive).
  // Empty = start from current head (no historical events).
  string after = 2;

  // Enable catch-up coalescing when consumer is behind.
  // When enabled and consumer is catching up, multiple events
  // for the same document may be merged.
  bool coalesce_on_catch_up = 3;
}

// Event represents a normalized change event from the database.
message Event {
  // Unique event identifier.
  string id = 1;

  // Tenant identifier.
  string tenant = 2;

  // Collection name where the change occurred.
  string collection = 3;

  // Document identifier that was changed.
  string document_id = 4;

  // Operation type: "insert", "update", "replace", or "delete".
  string operation_type = 5;

  // Full document after the change (JSON encoded).
  // Empty for delete operations.
  bytes full_document = 6;

  // Description of update changes (JSON encoded).
  // Only present for update operations.
  bytes update_description = 7;

  // MongoDB cluster timestamp.
  ClusterTime cluster_time = 8;

  // Unix timestamp in milliseconds when the event was received.
  int64 timestamp = 9;

  // Current progress marker (opaque string).
  // Consumer should save this value and pass it as 'after'
  // when reconnecting to resume from this position.
  string progress = 10;
}

// ClusterTime represents MongoDB cluster timestamp for ordering.
message ClusterTime {
  // Seconds since Unix epoch.
  uint32 t = 1;

  // Increment within the second (for ordering multiple events).
  uint32 i = 2;
}
